--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -446,12 +446,26 @@ cpdefine("inline:com-chilipeppr-widget-indicadores", ["chilipeppr_ready", /* oth
                 <!-- Tab 1 -->
                 <div class="tab-pane active" id="com-chilipeppr-widget-indicadores-tab1">
                         <div class="led-box">
-                    <div class="led-green"></div>
-                    <p>Green LED</p>
+                    <div class="led-green" id="indicadorhusillo"></div>
+                    <p>Husillo</p>
                         </div>
-                    <div class="">
-                        <button type="button" class="btn btn-xs btn-default btn-helloworld2" style="margin: 4px 0;">Hello World 2</button>
-                    </div>
+
+
+                        <div class="led-box">
+                                <div class="led-green" id="indicadortaladro"></div>
+                                <p>Taladro</p>
+                                    </div>
+                        
+                    <div class="led-box">
+                    <div class="led-green" id="indicadortaladropos"></div>
+                    <p>Taladro Posición Trabajo</p>
+                        </div>
+
+                        <div class="led-box">
+                                <div class="led-green" id="indicadormesas"></div>
+                                <p>Mesas modo Gantry</p>
+                                    </div>
+                   
                 </div>
 
                 <!-- Tab 2 -->
