--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -33,7 +33,7 @@ box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00
   background-color: red;
   border-radius: 50%;
   
-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
+box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, red 0 2px 12px;
 }
 
 .led-box {
