--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -438,16 +438,15 @@ cpdefine("inline:com-chilipeppr-widget-indicadores", ["chilipeppr_ready", /* oth
                         <ul class="dropdown-menu dropdown-menu-right" role="menu"></ul>
                     </div>
                 </div>
-            </div> <span class="panel-title" data-toggle="popover">Template Widget</span> <span style="font-size:9px;" class="fb-build">v1</span>
+            </div> <span class="panel-title" data-toggle="popover">Indicadores</span> <span style="font-size:9px;" class="fb-build">v1</span>
 
         </div>
         <div class="panel-body">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-                <li class="active"><a href="#com-chilipeppr-widget-indicadores-tab1" role="tab" data-toggle="tab">Tab 1</a>
+                <li class="active"><a href="#com-chilipeppr-widget-indicadores-tab1" role="tab" data-toggle="tab">Indicadores de Estado</a>
                 </li>
-                <li><a href="#com-chilipeppr-widget-indicadores-tab2" role="tab" data-toggle="tab">Tab 2</a></li>
-                <li><a href="#com-chilipeppr-widget-indicadores-tab3" role="tab" data-toggle="tab">Tab 3</a></li>
+                
             </ul>
             <!-- Tab panes -->
 
