--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -435,7 +435,7 @@ cpdefine("inline:com-chilipeppr-widget-indicadores", ["chilipeppr_ready", /* oth
 
             <div class="btn-toolbar pull-right" role="toolbar">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-xs btn-default btn-sayhello" data-delay="1000" data-animation="true" data-placement="auto" data-container="body" data-trigger="hover" data-title="Say Hello" data-content="Generate a hello message">Say Hello
+                    <button type="button" class="btn btn-xs btn-default btn-sayhello" data-delay="1000" data-animation="true" data-placement="auto" data-container="body" data-trigger="hover" data-title="Forzar Actualización" data-content="Generate a hello message">Say Hello
                     </button>
                 </div>
                 <div class="btn-group">
