--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -591,7 +591,7 @@ cpdefine("inline:com-chilipeppr-widget-indicadores", ["chilipeppr_ready", /* oth
                     <p>14</p>
                         </div>
             
-        <div class="led-box">
+        <div class="led-box2">
         <div class="led-off" id="ib15"></div>
         <p>15</p>
             </div>
