Se agrego indicador Posición husillo

--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -488,6 +488,11 @@ cpdefine("inline:com-chilipeppr-widget-indicadores", ["chilipeppr_ready", /* oth
                         </div>
 
 
+                         <div class="led-box">
+                    <div class="led-off" id="indicadorposhusillo"></div>
+                    <p>Husillo Posición Trabajo</p>
+                        </div>
+                    
                         <div class="led-box">
                                 <div class="led-off" id="indicadortaladro"></div>
                                 <p>Taladro</p>
