--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -25,6 +25,16 @@
   
 box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
 }
+        
+        .led-yellow {
+  margin: 0 auto;
+  width: 24px;
+  height: 24px;
+  background-color: #ffff00;
+  border-radius: 50%;
+  
+box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #C49102 0 -1px 9px, #ffff00 0 2px 12px;
+}
 
 .led-off {
   margin: 0 auto;
