Se agrego Diagnóstico

--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -489,6 +489,9 @@
                 <li><a href="#com-chilipeppr-widget-indicadores-tab3" role="tab" data-toggle="tab">Posicionadores</a>
                 </li>
 
+                <li><a href="#com-chilipeppr-widget-indicadores-tab4" role="tab" data-toggle="tab">Diagnóstico</a>
+                </li>
+
             </ul>
             <!-- Tab panes -->
 
@@ -713,6 +716,14 @@
 
                 </div>
 
+                <!-- Tab 4-->
+                <div class="tab-pane active" id="com-chilipeppr-widget-indicadores-tab4">
+
+                    <div class="led-box">
+                        <div class="led-off" id="indicadori21"></div>
+                        <p>I21</p>
+                    </div>
+                </div>
             </div>
 
         </div>
