--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -717,7 +717,7 @@
                 </div>
 
                 <!-- Tab 4-->
-                <div class="tab-pane active" id="com-chilipeppr-widget-indicadores-tab4">
+                <div class="tab-pane" id="com-chilipeppr-widget-indicadores-tab4">
 
                     <div class="led-box">
                         <div class="led-off" id="indicadori21"></div>
