--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -721,7 +721,7 @@
 
                     <div class="led-box">
                         <div class="led-off" id="indicadori21"></div>
-                        <p>I21</p>
+                        <p>I21 Contactores abiertos</p>
                     </div>
                 </div>
             </div>
