--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -530,6 +530,14 @@
                         <div class="led-off" id="indicadoralarma"></div>
                         <p>Alarma</p>
                     </div>
+                         <div class="led-box">
+                        <div class="led-off" id="indicadorhome"></div>
+                        <p>MAQUINA SIN HOME</p>
+                    </div>
+                         <div class="led-box">
+                        <div class="led-off" id="indicadorsoftlimit"></div>
+                        <p>ALARMA DE LIMITES</p>
+                    </div>
 
                     <p> </p>
 
