--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -539,6 +539,10 @@
                         <p>ALARMA DE LIMITES</p>
                     </div>
 
+                          <div class="led-box">
+                        <div class="led-off" id="indicadorerrorejec"></div>
+                        <p>ERROR DE EJECUCIÓN</p>
+                    </div>
                     <p> </p>
 
                 </div>
