--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -468,13 +468,13 @@
             <ul class="nav nav-tabs" role="tablist">
                 <li class="active"><a href="#com-chilipeppr-widget-indicadores-tab1" role="tab" data-toggle="tab">Indicadores de Estado</a>
                 </li>
-                <li><a href="#com-chilipeppr-widget-indicadores-tab2" role="tab" data-toggle="tab">Brocas</a>
+                <li style="display:none;"><a href="#com-chilipeppr-widget-indicadores-tab2" role="tab" data-toggle="tab">Brocas</a>
                 </li>
 
-                <li><a href="#com-chilipeppr-widget-indicadores-tab3" role="tab" data-toggle="tab">Posicionadores</a>
+                <li style="display:none;"><a href="#com-chilipeppr-widget-indicadores-tab3" role="tab" data-toggle="tab">Posicionadores</a>
                 </li>
 
-                <li><a href="#com-chilipeppr-widget-indicadores-tab4" role="tab" data-toggle="tab">Diagnóstico</a>
+                <li style="display:none;"><a href="#com-chilipeppr-widget-indicadores-tab4" role="tab" data-toggle="tab">Diagnóstico</a>
                 </li>
 
             </ul>
