--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -485,28 +485,28 @@
                 <!-- Tab 1 -->
                 <div class="tab-pane active" id="com-chilipeppr-widget-indicadores-tab1">
 
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadorhusillo"></div>
                         <p>Husillo</p>
                     </div>
 
 
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadorposhusillo"></div>
                         <p>Husillo Posición Trabajo</p>
                     </div>
 
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadortaladro"></div>
                         <p>Taladro</p>
                     </div>
 
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadortaladropos"></div>
                         <p>Taladro Posición Trabajo</p>
                     </div>
 
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadormesas"></div>
                         <p>Mesas modo Gantry</p>
                     </div>
@@ -515,11 +515,11 @@
                         <div class="led-off" id="indicadoralarma"></div>
                         <p>Alarma</p>
                     </div>
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadorhome"></div>
                         <p>MAQUINA SIN HOME</p>
                     </div>
-                    <div class="led-box">
+                    <div class="led-box" style="display:none;">
                         <div class="led-off" id="indicadorsoftlimit"></div>
                         <p>ALARMA DE LIMITES</p>
                     </div>
